# Worldbuilding-Interactive-Program

./: .gitignore  CLAUDE.md  README.md  build_release.py  installer.iss  memory-research.md  orchestration-research.md  phase2-plan-revised.md  phase2-plan.md  progression-map.md  pyproject.toml  requirements-dev.txt  requirements.txt  volume3-analysis.md  worldbuilding.spec
.claude/: settings.json
app/: __init__.py  __main__.py  main.py  main_window.py  paths.py
docs/: consistency-research.md  decisions.md  desktop-framework-research.md  engine-code-audit.md  progress.md  progression-map.md  project-audit.md  research-graph-visualization.md  research-pyside6-architecture.md  rlm-research.md  volume2-analysis.md  volume3-analysis.md
engine/: backup_manager.py  bookkeeper.py  chunk_puller.py  consistency_checker.py  data_manager.py  engine_manager.py  error_recovery.py  fair_representation.py  graph_builder.py  option_generator.py  reference_index.json  source_index.json  sqlite_sync.py  template_registry.json  utils.py
generation/: concept-bank.json
hooks/: check_completion.py  end_session.py  inject_step_context.py  save_checkpoint.py  session_start.py  validate_writes.py
packaging/: build_release.py  installer.iss  worldbuilding.spec
reference-databases/: source-text.txt
scripts/: create_icon.py  create_shortcut.ps1
tests/: __init__.py  conftest.py  test_backup_manager.py  test_bookkeeper.py  test_chunk_puller.py  test_consistency_checker.py  test_data_manager.py  test_edge_cases.py  test_engine_manager.py  test_error_recovery.py  test_event_bus.py  (+12 more)
(+154 files in other folders)
