[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "worldbuilding-interactive-program"
version = "0.3.0"
description = "Interactive worldbuilding desktop application with AI-assisted entity management and knowledge graph visualization."
requires-python = ">=3.11"
license = {text = "MIT"}
readme = "README.md"
dependencies = [
    "pydantic>=2.0,<3.0",
    "networkx>=3.0",
    "PySide6-Essentials>=6.7.0,<7.0",
    "qt-material>=2.14",
    "qtawesome>=1.3.0",
    "qasync>=0.27.0",
    "platformdirs>=4.0",
    "anthropic>=0.40.0,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/blackeagle54/Worldbuilding-Interactive-Program"
Repository = "https://github.com/blackeagle54/Worldbuilding-Interactive-Program"
Issues = "https://github.com/blackeagle54/Worldbuilding-Interactive-Program/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app", "engine", "hooks"]
